Fix heading breaks on iOS devices

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -129,10 +129,14 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 3.5em;
+    font-size: 3em;
     font-weight: bold;
     letter-spacing: 0.05em;
     line-height: 1.5;
+
+    @media screen and (min-width: 576px) {
+        font-size: 3.5em;
+    }
 }
 
 h2 {
